--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -19,29 +19,29 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_gravity="center"
-            android:text="Are you sure you want to delete your account? To continue, please enter your username and password in the boxes below and press confirm."
+            android:text="Please enter your current password and the password you would like to change to"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="20sp"/>
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Username"
-                android:textSize="20sp"
-                android:layout_marginLeft="48dp"
-                android:textColor="#000000"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Current Password"
+            android:textSize="20sp"
+            android:layout_marginLeft="48dp"
+            android:textColor="#000000"/>
 
         <EditText
-                android:layout_width="200dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:background="@color/white" />
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:background="@color/white" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Password"
+            android:text="New Password"
             android:textSize="20sp"
             android:layout_marginLeft="48dp"
             android:textColor="#000000"/>
@@ -67,12 +67,12 @@
                 android:text="Cancel"
                 android:layout_marginRight="10dp"/>
             <Button
-                android:id="@+id/confirm_delete"
+                android:id="@+id/confirm_password"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
-                android:text="Delete"
+                android:text="Confirm"
                 android:layout_marginLeft="10dp"
-                android:backgroundTint="#ff0000"/>
+                android:backgroundTint="#00ff00"/>
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
